fix(FEC-13453): skip button is behind the dual screen (#21)
add `z-index` to the skip button so it will show on top of dualscreen in both Show and Hide states.

Solves FEC-13453

--- a/src/components/skip/skip.scss
+++ b/src/components/skip/skip.scss
@@ -11,6 +11,7 @@
   font-size: 16px;
   cursor: pointer;
   padding: 7px 10px;
+  z-index: 2;
 
   &.interactive-area-position {
     bottom: 0;
